<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <TextView
        android:id="@+id/txtForgotPassLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/enter_mail_app"
        android:textColor="#090909"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTxtEmailRecovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtForgotPassLabel"
        app:layout_constraintStart_toStartOf="@+id/txtForgotPassLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtForgotPassLabel" />

    <Button
        android:id="@+id/btnRecover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/recover"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edTxtEmailRecovery"
        app:layout_constraintStart_toStartOf="@+id/edTxtEmailRecovery"
        app:layout_constraintTop_toBottomOf="@+id/edTxtEmailRecovery" />

    <Button
        android:id="@+id/btnBackForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="337dp"
        android:backgroundTint="#EC0505"
        android:text="@string/back"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnRecover"
        app:layout_constraintStart_toStartOf="@+id/btnRecover"
        app:layout_constraintTop_toBottomOf="@+id/btnRecover" />

</androidx.constraintlayout.widget.ConstraintLayout>