<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/txtLoginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTxtLoginEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginLabel"
        app:layout_constraintStart_toStartOf="@+id/txtLoginLabel"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginLabel" />

    <EditText
        android:id="@+id/edTxtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edTxtLoginEmail"
        app:layout_constraintStart_toStartOf="@+id/edTxtLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/edTxtLoginEmail" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edTxtLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/edTxtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/edTxtLoginPassword" />

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="center"
        android:text="@string/new_user"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:text="@string/forgot_pass"
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnGoRegister"
        app:layout_constraintStart_toStartOf="@+id/btnGoRegister"
        app:layout_constraintTop_toBottomOf="@+id/btnGoRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>